--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
             <p>
               O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro.
               <br><br>
-               Bom para: <br>
-              ・História
+              Bom para:
+              <ul>
+               <li>
+                História
+               </li>
+              </ul>
             </p>
           </li>
           <img src="/assets/topico 2.jpg" alt="casa vermelha com árvores e montanhas no fundo">
@@ -53,13 +57,42 @@
             <p>
               O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. 
               <br><br>
+              Bom para: 
+              <ul>
+                <li>
+                  História
+                </li>
+              </ul>
+            </p>
+          </li>
+          <img src="/assets/parque.jpg" alt="">
+          <li>
+            <h2>Parque Yongdusan</h2>
+            <p>
+              O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.
+                <br><br>
               Bom para: <br>
-              ・História
+               <ul>
+                <li>
+                  Casais
+                </li>
+                <li>
+                  famílias
+                </li>
+                <li>
+                  Orçamento
+                </li>
+               </ul>
+
             </p>
           </li>
         </ol>
       </section>
-      <section class="Descrition"></section>
+      <section class="Descrition">
+        <p>
+          As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. 
+        </p>
+      </section>
 
    
 
