--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <div id="container" >
     <main>
-      <section class="Conheça">
+      <section class="conheca">
        <p class="headline">
         SUA PRÓXIMA VIAGEM:
        </p>
        <h1>
         Conheça Busan
        </h1>
-       <img src="/assets/cidade 1.jpg" alt="cidade de busan com muitos prédios e uma ponte grande atravessando um rio e montanhas no fundo a noite">
+        <img src="/assets/cidade 1.jpg" alt="cidade de busan com muitos prédios e uma ponte grande atravessando um rio e montanhas no fundo a noite">
        <p>
         Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
        </p>
